# GoldEditor

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  main.cpp
src/: main.rs
src/Sidebar/: Sidebar.cpp  Sidebar.h
src/Sidebar/Item/: Item.cpp  Item.h
src/Workspace/: Workspace.cpp  Workspace.h
src/Workspace/Tab/: Tab.cpp  Tab.h
src/WorkspaceContainer/: WorkspaceContainer.cpp  WorkspaceContainer.h
src/components/: item.rs  mod.rs  sidebar.rs  workspace.rs
